Collapse up fix

--- a/assets/css/naive-ui.css
+++ b/assets/css/naive-ui.css
@@ -105,6 +105,14 @@
   }
   &:not(.collapse-permissions) .n-collapse-item {
     .n-collapse-item-arrow {
+      transform: rotate(90deg);
+    }
+    .n-collapse-item__header.n-collapse-item__header--active .n-collapse-item-arrow {
+      transform: rotate(-90deg);
+    }
+  }
+  &.collapse-up .n-collapse-item {
+    .n-collapse-item-arrow {
       transform: rotate(-90deg);
     }
     .n-collapse-item__header.n-collapse-item__header--active .n-collapse-item-arrow {
